# AnyEdit

./: .gitignore  README.md  data_qwen2.5_window1_iter341.json  llama3_correction_example.py  llama3_format_example.py  llama3_formatter_solution.py  llama3_input_formatter.py  main.py  modelscope_sentence_transformer.py  pyproject.toml  results.md  run.sh  run_alphaedit_original.sh  run_qwen.sh  run_qwen_alphaedit.sh  run_qwen_icl.sh  run_sequencial.sh  setup_modelscope.py  test_modelscope_integration.py  test_tokenizer_padding.py  tmp.txt  tokenizer_utils.py
AlphaEdit/: AlphaEdit_main.py  compute_z.py
AlphaEdit_ARE/: AlphaEdit_ARE_main.py  compute_z.py
data/: editevery.json
data/UnKE/: final_data_v2.json
dsets/: counterfact.py  editevery.py
experiments/: evaluate_icl.py  evaluate_uns.py  get_p.py  summarize_uns.py
hparams/AlphaEdit_ARE/: Llama3-8B-Instruct.json  Qwen2.5-7B-Instruct.json
memit/: memit_main.py
memit_ARE/: memit_ARE_main.py
meta-llama/: llama-3-8b-instruct
unke_ARE/: compute_z.py
util/: layer_stats.py  multi_layer_stats.py
