[project]
name = "anyedit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "higher>=0.2.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "transformers==4.40",
    "uv>=0.8.14",
]
